# timed_trajectory_controller

./: CMakeLists.txt  README.md  controller_plugins.xml  mainpage.dox  manifest.xml  package.xml
include/timed_trajectory_controller/: timed_trajectory_controller.h
scripts/: use_controller.sh
src/: timed_trajectory_controller.cpp
