<package>
  <name>timed_trajectory_controller</name>
  <description> timed_trajectory_controller </description>
  <version>0.8.0</version>

  <maintainer email="hausmankarol@gmail.com">Karol Hausman</maintainer>

  <license>BSD</license>

  <author>bhaskara</author>

<buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>cmake_modules</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>  
  <build_depend>pr2_controller_manager</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>roscpp</run_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>


 <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp -I${prefix}/srv/cpp"
	 lflags="-Wl,-rpath,${prefix}/lib/ -L${prefix}/lib -ltimed_trajectory_controller" />
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>



</package>
